sim environment now works with rudimentary keyboard input; still need to get it to increment as key is held down

--- a/workspace/src/barc/CMakeLists.txt
+++ b/workspace/src/barc/CMakeLists.txt
@@ -74,6 +74,10 @@ add_message_files(
    std_msgs
  )
 
+catkin_package(
+    CATKIN_DEPENDS message_runtime
+)
+
 ################################################
 ## Declare ROS dynamic reconfigure parameters ##
 ################################################
